// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.shopping.merchant.accounts.v1;

option csharp_namespace = "Google.Shopping.Merchant.Accounts.V1";
option go_package = "cloud.google.com/go/shopping/merchant/accounts/apiv1/accountspb;accountspb";
option java_multiple_files = true;
option java_outer_classname = "AccessRightProto";
option java_package = "com.google.shopping.merchant.accounts.v1";
option php_namespace = "Google\\Shopping\\Merchant\\Accounts\\V1";
option ruby_package = "Google::Shopping::Merchant::Accounts::V1";

// The access right.
enum AccessRight {
  // Default value. This value is unused.
  ACCESS_RIGHT_UNSPECIFIED = 0;

  // Standard access rights.
  STANDARD = 1;

  // Has access to the same read-only methods as STANDARD, but no access to
  // any mutating methods.
  READ_ONLY = 4;

  // Admin access rights.
  ADMIN = 2;

  // Users with this right have access to performance and insights.
  PERFORMANCE_REPORTING = 3;

  // Users with this right have access to Merchant API and its notifications.
  // This role is only accessible to accounts that has a developer registration.
  API_DEVELOPER = 5;
}
